# cargo-alfred

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: Cargo.toml  README.md  example_workflow_name.alfredworkflow
example/src/: main.rs
src/: Info.plist.template  cargo.rs  main.rs
