[package]
name = "cargo-alfred"
version = "0.0.1"
authors = ["Ruslan Nasonov <rus.nasonov@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.105"
serde_json = "1.0.50"
serde_derive = "1.0.105"
zip = "0.5.5"
handlebars = "3.0.1"

[lib]
name = "cargo_alfred"
path = "src/lib.rs"
doc = true

[[bin]]
name = "cargo-alfred"
path = "src/main.rs"
doc = false
