[package]
name = "cargo-alfred"
version = "0.0.1"
authors = ["Ruslan Nasonov <rus.nasonov@gmail.com>"]
license-file = "LICENSE"
description = "A Cargo Subcommand that generates Alfred Workflow"
edition = "2018"
repository = "https://github.com/rusnasonov/cargo-alfred"
readme = "README.md"
keywords = ["cargo", "subcommand", "cargo-subcommand", "alfred", "osx"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::build-utils"]
exclude = [
    "example",
    ".vscode"
]

[dependencies]
serde = "1.0.105"
serde_json = "1.0.50"
serde_derive = "1.0.105"
zip = "0.5.5"
handlebars = "3.0.1"

[lib]
name = "cargo_alfred"
path = "src/lib.rs"
doc = true

[[bin]]
name = "cargo-alfred"
path = "src/main.rs"
doc = false
